--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-531.7KB/s(Youtube:不良林), server: 103.56.62.145, port: 3381, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 塞浦路斯-411.7KB/s(Youtube:不良林), server: 213.169.137.221, port: 989, type: ss, cipher: aes-256-cfb, password: f8f7aCzcPKbsF8p3}
-  - {name: 🇺🇸 美国-3.06MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-4.89MB/s(Youtube:不良林), server: 103.56.60.235, port: 3381, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇨🇭 瑞士-377.1KB/s(Youtube:不良林), server: ch1.nodegz.top, port: 1400, type: trojan, password: 8087b6af-8b74-3097-9ec6-f688da88073e, sni: ch1.nodegz.top, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-3.09MB/s(Youtube:不良林), server: 134.195.101.32, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-1.55MB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇯🇵 日本-1.36MB/s(Youtube:不良林), server: 158.101.74.69, port: 31939, type: vmess, uuid: f130c826-40d9-44fb-be3d-75ebcb750d12, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-1.88MB/s(Youtube:不良林), server: usyy.884899.cf, port: 443, type: trojan, password: 2debb06b-95ce-4e9b-956a-6cf7cadac30c, sni: usyy.884899.cf, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.51MB/s(Youtube:不良林), server: fhcamd2.gaox.ml, port: 443, type: trojan, password: dbf9bf9c-2c3f-474a-8031-d4c00666a989, sni: fhcamd2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-1.45MB/s(Youtube:不良林), server: 165.154.243.157, port: 48001, type: trojan, password: 9cbbeb3c-d2b6-482c-97c1-1e037f0102f2, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-357.2KB/s(Youtube:不良林), server: 194.124.35.42, port: 805, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇯🇵 日本-3.94MB/s(Youtube:不良林), server: jgwdb1.gaox.ml, port: 443, type: trojan, password: a580d839-ee41-4df1-bf03-6789dca32e30, sni: jgwdb1.gaox.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-161.1KB/s(Youtube:不良林), server: 164.92.107.59, port: 1645, type: ss, cipher: chacha20-ietf-poly1305, password: 3f411e87-3e93-4f23-bc22-263a748bc8c5}
+  - {name: 🇫🇷 法国-1.32MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
+  - {name: 🇨🇳 台湾-2.10MB/s(Youtube:不良林), server: tw01.henet.cyou, port: 20000, type: vmess, uuid: b3ea4273-e3a8-46a3-93b2-1aaa1c9dbd61, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /live, ws-headers: {Host: tw01.henet.cyou}}
+  - {name: 🇺🇸 美国-312.4KB/s(Youtube:不良林), server: 159.223.54.93, port: 80, type: vmess, uuid: d97ee737-7bc0-4dca-acf1-85135ed4d97e, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 159.223.54.93}}
+  - {name: 🇺🇸 美国-752.0KB/s(Youtube:不良林), server: v04.ssrsub.com, port: 153, type: vmess, uuid: 2df8cb33-de40-438c-840a-5f1d05fe7518, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v04.ssrsub.com}}
+  - {name: 🇷🇺 俄罗斯联邦-873.5KB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
+  - {name: 🇬🇧 英国-1.12MB/s(Youtube:不良林), server: jgwld3.gaox.ml, port: 443, type: trojan, password: 71b55a84-3fac-4458-abff-eaad79219c91, sni: jgwld3.gaox.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-531.7KB/s(Youtube:不良林)
-      - 塞浦路斯-411.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.89MB/s(Youtube:不良林)
-      - 🇨🇭 瑞士-377.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.09MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.55MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.36MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.88MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.51MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.45MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-357.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.94MB/s(Youtube:不良林)
+      - 🇺🇸 美国-161.1KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.32MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.10MB/s(Youtube:不良林)
+      - 🇺🇸 美国-312.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-752.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-873.5KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.12MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-531.7KB/s(Youtube:不良林)
-      - 塞浦路斯-411.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.89MB/s(Youtube:不良林)
-      - 🇨🇭 瑞士-377.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.09MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.55MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.36MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.88MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.51MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.45MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-357.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.94MB/s(Youtube:不良林)
+      - 🇺🇸 美国-161.1KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.32MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.10MB/s(Youtube:不良林)
+      - 🇺🇸 美国-312.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-752.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-873.5KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.12MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-531.7KB/s(Youtube:不良林)
-      - 塞浦路斯-411.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.89MB/s(Youtube:不良林)
-      - 🇨🇭 瑞士-377.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.09MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.55MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.36MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.88MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.51MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.45MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-357.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.94MB/s(Youtube:不良林)
+      - 🇺🇸 美国-161.1KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.32MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.10MB/s(Youtube:不良林)
+      - 🇺🇸 美国-312.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-752.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-873.5KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.12MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇨🇳 台湾-2.10MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-531.7KB/s(Youtube:不良林)
-      - 塞浦路斯-411.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.89MB/s(Youtube:不良林)
-      - 🇨🇭 瑞士-377.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.09MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.55MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.36MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.88MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.51MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.45MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-357.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.94MB/s(Youtube:不良林)
+      - 🇺🇸 美国-161.1KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.32MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.10MB/s(Youtube:不良林)
+      - 🇺🇸 美国-312.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-752.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-873.5KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.12MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-531.7KB/s(Youtube:不良林)
-      - 塞浦路斯-411.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.89MB/s(Youtube:不良林)
-      - 🇨🇭 瑞士-377.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.09MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.55MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.36MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.88MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.51MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.45MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-357.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.94MB/s(Youtube:不良林)
+      - 🇺🇸 美国-161.1KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.32MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.10MB/s(Youtube:不良林)
+      - 🇺🇸 美国-312.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-752.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-873.5KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.12MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-531.7KB/s(Youtube:不良林)
-      - 塞浦路斯-411.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.89MB/s(Youtube:不良林)
-      - 🇨🇭 瑞士-377.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.09MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.55MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.36MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.88MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.51MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.45MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-357.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.94MB/s(Youtube:不良林)
+      - 🇺🇸 美国-161.1KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.32MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.10MB/s(Youtube:不良林)
+      - 🇺🇸 美国-312.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-752.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-873.5KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.12MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-531.7KB/s(Youtube:不良林)
-      - 塞浦路斯-411.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.89MB/s(Youtube:不良林)
-      - 🇨🇭 瑞士-377.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.09MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.55MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.36MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.88MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.51MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.45MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-357.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.94MB/s(Youtube:不良林)
+      - 🇺🇸 美国-161.1KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.32MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.10MB/s(Youtube:不良林)
+      - 🇺🇸 美国-312.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-752.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-873.5KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.12MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
