--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-3.22MB/s(Youtube:不良林), server: 45.88.148.234, port: 38443, type: trojan, password: 9cbbeb3c-d2b6-482c-97c1-1e037f0102f2, skip-cert-verify: true}
-  - {name: 🇭🇰 香港-3.99MB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20711, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.64MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇬🇧 英国-1.12MB/s(Youtube:不良林), server: jgwld3.gaox.ml, port: 443, type: trojan, password: 71b55a84-3fac-4458-abff-eaad79219c91, sni: jgwld3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.76MB/s(Youtube:不良林), server: free-godlikeanyone.koyeb.app, port: 443, type: vmess, uuid: b7b1f689-f82e-4ce4-97e7-8a8997370e44, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /b7b1f689-f82e-4ce4-97e7-8a8997370e44-vmess, ws-headers: {Host: free-godlikeanyone.koyeb.app}}
-  - {name: 🇦🇺 澳大利亚-1.05MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
   - {name: 🇷🇺 俄罗斯联邦-1.49MB/s(Youtube:不良林), server: 165.154.243.157, port: 48002, type: trojan, password: 9cbbeb3c-d2b6-482c-97c1-1e037f0102f2, skip-cert-verify: true}
-  - {name: 🇬🇧 英国-1.27MB/s(Youtube:不良林), server: vpnu.loungers.cc, port: 56830, type: vmess, uuid: d2e92a19-f50c-426e-cd15-03ece7f4f3b1, alterId: 32, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ws/x-ui, ws-headers: {Host: vpnu.loungers.cc}}
-  - {name: 🇸🇬 新加坡-1.87MB/s(Youtube:不良林), server: sg1.jjzgy.live, port: 32333, type: trojan, password: 78234ff5-7ddb-3b20-b797-d430b0d4a7b9, sni: sg1.jjzgy.live, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.01MB/s(Youtube:不良林), server: fhcamd2.gaox.ml, port: 443, type: trojan, password: dbf9bf9c-2c3f-474a-8031-d4c00666a989, sni: fhcamd2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 台湾-988.0KB/s(Youtube:不良林), server: tw01.henet.cyou, port: 20000, type: vmess, uuid: b3ea4273-e3a8-46a3-93b2-1aaa1c9dbd61, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /live, ws-headers: {Host: tw01.henet.cyou}}
+  - {name: 🇺🇸 美国-2.54MB/s(Youtube:不良林), server: 134.195.101.32, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-632.9KB/s(Youtube:不良林), server: 103.56.62.145, port: 3381, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-752.0KB/s(Youtube:不良林), server: v04.ssrsub.com, port: 153, type: vmess, uuid: 2df8cb33-de40-438c-840a-5f1d05fe7518, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v04.ssrsub.com}}
+  - {name: 🇺🇸 美国-1.16MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇬🇧 英国-771.3KB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇦 加拿大-931.7KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇸🇬 新加坡-709.7KB/s(Youtube:不良林), server: trojan2.udpgw.com, port: 443, type: trojan, password: 973ef350-f6a5-11ec-9274-1239d0255272, sni: trojan2.udpgw.com, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-917.1KB/s(Youtube:不良林), server: 72.140.224.197, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-3.22MB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.99MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.64MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.12MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.76MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.05MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.49MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.27MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.01MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-988.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-632.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-752.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.16MB/s(Youtube:不良林)
+      - 🇬🇧 英国-771.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-931.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-709.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-917.1KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-3.22MB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.99MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.64MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.12MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.76MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.05MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.49MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.27MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.01MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-988.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-632.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-752.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.16MB/s(Youtube:不良林)
+      - 🇬🇧 英国-771.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-931.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-709.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-917.1KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-3.22MB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.99MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.64MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.12MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.76MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.05MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.49MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.27MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.01MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-988.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-632.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-752.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.16MB/s(Youtube:不良林)
+      - 🇬🇧 英国-771.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-931.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-709.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-917.1KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-3.99MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-988.0KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-3.22MB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.99MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.64MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.12MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.76MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.05MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.49MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.27MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.01MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-988.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-632.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-752.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.16MB/s(Youtube:不良林)
+      - 🇬🇧 英国-771.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-931.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-709.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-917.1KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-3.22MB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.99MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.64MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.12MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.76MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.05MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.49MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.27MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.01MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-988.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-632.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-752.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.16MB/s(Youtube:不良林)
+      - 🇬🇧 英国-771.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-931.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-709.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-917.1KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-3.22MB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.99MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.64MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.12MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.76MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.05MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.49MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.27MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.01MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-988.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-632.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-752.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.16MB/s(Youtube:不良林)
+      - 🇬🇧 英国-771.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-931.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-709.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-917.1KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-3.22MB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.99MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.64MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.12MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.76MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.05MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.49MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.27MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.01MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-988.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-632.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-752.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.16MB/s(Youtube:不良林)
+      - 🇬🇧 英国-771.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-931.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-709.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-917.1KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
